<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark">


    <RelativeLayout
        android:id="@+id/body"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/info_events_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/primary"
            android:orientation="horizontal"
            android:paddingHorizontal="20dp"
            android:paddingVertical="15dp">

            <LinearLayout
                android:id="@+id/info_titles_ll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_400"
                    android:gravity="center"
                    android:text="@string/coupon_price"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="2dp"
                    android:fontFamily="@font/roboto_400"
                    android:gravity="center"
                    android:text="@string/odd"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_400"
                    android:gravity="center"
                    android:text="@string/max_price"
                    android:textColor="@color/white"
                    android:textSize="14sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_toEndOf="@id/info_titles_ll"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/coupon_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_400"
                    android:gravity="center"
                    tools:text="@string/coupon_price"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/odd_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="2dp"
                    android:fontFamily="@font/roboto_400"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text="2.39" />

                <TextView
                    android:id="@+id/max_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_400"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:text="23TL" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/roboto_400"
                    android:gravity="center"
                    android:text="@string/coupon_price_tl"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/price_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/shape_edittext_default"
                    android:fontFamily="@font/roboto_400"
                    android:gravity="start"
                    android:text="3"
                    android:inputType="numberDecimal"
                    android:maxLength="8"
                    android:maxLines="1"
                    android:paddingHorizontal="10dp"
                    android:scrollHorizontally="true"
                    android:textAlignment="viewStart"
                    android:textColor="@color/black"
                    android:textSize="13sp"
               />
            </LinearLayout>


        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/match_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/info_events_ll"
            android:orientation="vertical">

        </androidx.recyclerview.widget.RecyclerView>


    </RelativeLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/empty_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:cardBackgroundColor="@color/color_secondary"
        app:cardCornerRadius="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/roboto_400"
            android:gravity="center"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp"
            android:text="@string/add_match"
            android:textColor="@color/white"
            android:textSize="17sp" />
    </com.google.android.material.card.MaterialCardView>


</RelativeLayout>