<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="@color/transparent"
    android:elevation="2dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/nav_background_color"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">


        <LinearLayout
            android:id="@+id/fixtures_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="26dp"
                android:layout_height="26dp">

                <ImageView
                    android:id="@+id/fixtures_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:src="@drawable/ic_betting"
                    tools:tint="@color/white" />
            </RelativeLayout>

            <TextView
                android:id="@+id/fixtures_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               android:layout_marginVertical="2dp"
                android:fontFamily="@font/roboto_400"
                android:lineSpacingExtra="4dp"
                android:text="@string/bulletin"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/basket_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:foreground="?selectableItemBackgroundBorderless"
            android:background="@drawable/shape_nav_bar_coupon_detail"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">


            <TextView
                android:id="@+id/basket_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:fontFamily="@font/roboto_700"
                android:lineSpacingExtra="4dp"
                android:text="0"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:fontFamily="@font/roboto_400"
                android:lineSpacingExtra="4dp"
                android:text="@string/Match"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/favorites_container"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="26dp"
                android:layout_height="26dp">

                <ImageView
                    android:id="@+id/favorites_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:src="@drawable/ic_nav_more"
                    tools:tint="@color/white" />

            </RelativeLayout>

            <TextView
                android:id="@+id/favorites_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="2dp"
                android:lineSpacingExtra="4dp"
                android:text="@string/more"
                android:textColor="@color/black"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>